feat(add schema Produk): add schema Produk to ProdukController
